<resources>
    <string name="app_name" translatable="false">BbS OvG Timetable</string>

    <!-- Strings of menu_navigation_drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_weekX">Calendar week %1$s</string>
    <string name="navigation_drawer_actualWeek">Actual week (CW %1$s)</string>
    <string name="navigation_drawer_nextWeek">Next week (CW %1$s)</string>
    <string name="navigation_drawer_marks">Marks</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_bugreport">Report a bug</string>


    <!-- Strings of menu_options -->
    <string name="action_refresh">Refresh</string>
    <string name="action_switchView">Switch</string>


    <!-- Strings of NavigationActivity -->
    <string name="dialogTitle_webContentTask">Please wait…</string>
    <string name="dialogMessage_webContentTask">Checking for plan updates</string>
    <string name="snackbar_offlineMode">Offline mode: Please establish an internet connection!</string>


    <!-- Strings of SettingsActivity -->
    <string name="snackbar_useBackButton">Please use the back button to return to the previous view.</string>


    <!-- Strings of TabHostFragment -->
    <string name="section_monday">Mo</string>
    <string name="section_tuesday">Tu</string>
    <string name="section_wednesday">We</string>
    <string name="section_thursday">Th</string>
    <string name="section_friday">Fr</string>
    <string name="section_saturday">Sa</string>


    <!-- Strings of activity_settings -->
    <string name="category_actualClass">Class selection</string>
    <string name="title_actualClass">Current class</string>
    <string name="summary_actualClass">The app will only show plans for the selected class. Currently: %1$s</string>
    <string name="dialogTitle_actualClass">Please choose a class</string>
    <string name="key_actualClass" translatable="false">pkActualClass</string>

    <string name="category_dayView">Day view</string>
    <string name="title_showActualDay">Show actual day</string>
    <string name="summary_showActualDay">If enabled, the app will display the actual day on startup. This works only for the actual week.</string>
    <string name="key_showActualDay" translatable="false">pkShowActualDay</string>

    <string name="category_weekView">Week view</string>
    <string name="title_improvePerformance">Improve performance</string>
    <string name="summary_improvePerformance">The app will use the chosen method to improve the performance of the week view. Currently: %1$s</string>
    <string name="dialogTitle_improvePerformance">Please choose a method</string>
    <string name="key_ImprovePerformance" translatable="false">pkImprovePerformance</string>

    <string name="category_oldPlans">Old plans</string>
    <string name="title_showOldPlans">Show old plans</string>
    <string name="summary_showOldPlans">If enabled, the app will display as many plans as selected below.</string>
    <string name="key_showOldPlans" translatable="false">pkShowOldPlans</string>
    <string name="title_showXPlans">Amount of plans to show</string>
    <string name="dialogTitle_showXPlans">Please choose</string>
    <string name="summary_showXPlans">The app will display as many plans as chosen. Currently: %1$s</string>
    <string name="key_showXPlans" translatable="false">pkShowXPlans</string>
    <string name="title_rememberPlan">Remember selected plan</string>
    <string name="summary_rememberPlan">If checked, the app will show you the last viewed plan on start and resume. If not checked, the app will always show current weeks plan.</string>
    <string name="key_rememberPlan" translatable="false">pkRememberPlan</string>

    <string name="category_about">About</string>
    <string name="title_developers">Developers</string>
    <string name="summary_developers" translatable="false">Kevin Kleiber</string>
    <string name="title_version" translatable="false">Version</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>
